--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </form>
         </div>
         <div class="weather__image--github">
-          <a href="https://github.com/mshahanwaz/weather-app">
+          <a href="https://ayushi212001.github.io/weather-app/">
             <i class="bi bi-github"></i>
           </a>
         </div>
